Implement mutual buttons, and display clicked buttons. Additionally create new ScreenCommunicationManager class to handle future implementation of sockets.