@@ -13,7 +13,6 @@ import javafx.scene.paint.Color;
 import javafx.stage.Stage;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * A JavaFX application that serves as a functional mockup of a gas pump's digital touch screen.
@@ -69,7 +68,7 @@ public class GasPumpUI extends Application implements ScreenCommunicationManager
         List<Button> mutuallyExclusiveButtons = layout.buttons().values().stream()
                 .filter(info -> info.type() == ScreenParser.BUTTON_TYPE_MUTUALLY_EXCLUSIVE)
                 .map(ScreenParser.ButtonInfo::button)
-                .collect(Collectors.toList());
+                .toList();
 
         layout.buttons().forEach((cellId, info) -> {
             Button currentButton = info.button();
